# windows-api-rs-demo

./: .npmrc  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.js
.github/workflows/: CI.yml  lint.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs  main.rs
src/windows/: mod.rs
