[package]
authors = ["TongZ <iamtongton@gmail.com>"]
edition = "2021"
name    = "windows-api-rs-demo"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror   = "1.0"
napi        = { version = "2.13", default-features = false, features = ["napi4"] }
napi-derive = "2.13"
sysinfo = "0.30.7"
regex = "1.10.4"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.52"
features = [
    "Win32_Globalization",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
